# eatme

./: .env.example  .gitignore  README.md  docker-compose.yml  setup.sh
api/: .air.toml  Dockerfile  go.mod  go.sum
api/cmd/api/: main.go
api/db/: memory.go  memory_test.go  store.go
api/docs/: docs.go  swagger.json  swagger.yaml
api/handlers/: recipe.go  user.go
api/internal/api/: utils.go
api/internal/chat/: handler.go  service.go
api/internal/clients/: errors.go  ml.go
api/internal/db/: context.go  errors.go  sqlite_store.go  store.go
api/internal/handlers/: chat.go  meal.go  middleware.go  recipe.go  user.go  utils.go
api/internal/middleware/: middleware.go
api/internal/models/: api.go  chat.go  recipe.go  thread.go  user.go
api/models/: api.go  chat.go  meal.go  recipe.go  user.go
api/services/: user_service.go  user_service_test.go
api/tests/: mlstub.go  modify_recipe_flow_test.go  suggestion_flow_test.go  testutil.go
app/: .gitignore  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
app/src/: App.tsx  constants.ts  main.tsx  routes.tsx
app/tests/: signup.spec.ts
docs/: setup.md
docs/cli/: README.md
ml-gateway/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
ml-gateway/app/: app.py  main.py  models.py
ml-gateway/app/engines/: __init__.py  classifier.py  groceries.py  llm.py  qa.py  recipe.py  schemas.py
scripts/: api-docs.sh  api-test.sh  app-add.sh  app-gen.sh  app-start.sh  app-test.sh  cleanup.sh  dev-start.sh  dev-stop.sh  eatme.sh  ml-dev.sh  ml-venv.sh
(+115 files in other folders)
