[project]
name = "ml-gateway"
version = "0.1.0"
description = "ML Gateway for EatMe recipe generation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "httpx>=0.26.0",
    "anthropic>=0.57.1",
    "replicate>=1.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.1.0",
    "ruff>=0.2.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.black]
line-length = 88
target-version = ["py311"]
